# python-project-50

./: .coveragerc  .dependencies_log  Ideas.txt  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  diff_abstraction.py  file_parser.py  generate_diff.py  stylish.py
gendiff/diffs/: flat_jsons_diff.py
gendiff/scripts/: gendiff.py
gendiff/views/: generate_veiw.py  json_format.py  plain.py  stylish.py
tests/: test_diff_abstraction.py  test_file_parser.py  test_flat_jsons_diff.py  test_generate_diff.py  test_stylish.py
tests/fixtures/: dict_2.txt  file1_n.yaml  flat_dicts.py  nested_12j.txt  simple_nested_diff.txt  wrong.txt  wrong_data.json  wrong_data.yaml  wrong_data_message.txt
